--- a/src/app/media-item.component.html
+++ b/src/app/media-item.component.html
@@ -1,12 +1,8 @@
 <h2>{{ mediaItem.name }}</h2>
-
-<!--div *ngIf="mediaItem.watchedOn">Watched on {{mediaItem.watchedOn}}</div-->
-<!--same as above-->
 <ng-template [ngIf]="mediaItem.watchedOn"]>
   <div>Watched on {{ mediaItem.watchedOn | date: 'shortDate' }}</div>
 </ng-template>
-
-<div>{{mediaItem.category}}</div>
+<div class="label">{{mediaItem.category}}</div>
 <div>{{mediaItem.year}}</div>
 <div class="tools">
   <svg
